/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.sabot.exec.store.deltalake.proto;

option java_package = "com.dremio.sabot.exec.store.deltalake.proto";
option optimize_for = SPEED;

option java_outer_classname = "DeltaLakeProtobuf";

message DeltaLakeReadSignature {
  required int64 commitReadEndVersion = 1; // Last read version
}

message DeltaLakeDatasetXAttr {
  optional int64 commitReadStartVersion = 1; // Base DeltaLog commit file version for read
  optional int64 commitReadEndVersion = 2; // Last snapshot version
  optional int64 closestCheckpointVersion = 3; // Delta version of the closest checkpoint before the commitReadEndVersion
  optional int64 closestLocalSnapshot = 4; // Last written dremio equivalent of the DeltaLake snapshot (iceberg snapshot)
  optional int64 numFiles = 5; // Total number of parquet data files
  optional int64 sizeBytes = 6; // Total size in bytes of t he parquet data files
}

